committing improvements to, xalanj tests configuration